--- a/package.json
+++ b/package.json
@@ -11,9 +11,13 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^3.5.0",
     "@next/font": "^14.2.15",
+    "axios": "^1.7.9",
+    "groq-sdk": "^0.12.0",
     "next": "15.1.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "tailwind-scrollbar": "^3.1.0",
+    "typewriter-effect": "^2.21.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
