--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,8 @@
   "editor.fontFamily": "JetBrains Mono, Consolas, \"Courier New\", monospace",
   "markdown.preview.fontFamily": "JetBrains Mono, Consolas, \"Courier New\", monospace",
   "editor.fontWeight": "normal",
-  "terminal.integrated.fontFamily": "JetBrains Mono, Consolas, \"Courier New\", monospace"
+  "terminal.integrated.fontFamily": "JetBrains Mono, Consolas, \"Courier New\", monospace",
+  "editor.formatOnPaste": true,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode"
 }
