--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "15.1.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-resizable": "^3.0.5",
     "tailwind-scrollbar": "^3.1.0",
     "typewriter-effect": "^2.21.0"
   },
@@ -24,6 +25,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/react-resizable": "^3.0.8",
     "eslint": "^9",
     "eslint-config-next": "15.1.3",
     "postcss": "^8",
